# domestic

./: .env  .gitignore  Dockerfile  FEATURE_IDEAS.md  FEATURE_SUGGESTIONS.md  GEMINI.md  README.md  alembic.ini  docker-compose.test.yml  file::memory:  install_uv.sh  main.py  models.py  pyproject.toml  repository.py  requirements.txt  services.py  style.py  test.env  test_cj_api.sqlite
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 0ee55b190c28_migrate_tasks_to_task_definitions_table.py  0f0fabdbce8a_create_task_definitions_table.py  20250531000000_add_archived_to_workflowstatus.py  2025_05_29_create_workflow_and_task_tables.py  2025_05_29_seed_workflow_definitions.py  2025_05_30_add_user_id_to_workflow_instances.py  2025_05_30_change_task_names_to_jsonb.py  447f84f38a7e_remove_task_names_from_workflow_.py  5ed86f33ce5c_add_due_datetime_fields.py  64348a0ef10f_change_workflow_instance_created_at_to_.py  88279b51651c_add_share_token_to_workflow_instances.py
app/: config.py  database.py  dependencies.py  main.py  models.py  repository.py  services.py  style.py  templating.py  utils.py
app/core/: html_renderer.py  security.py
app/db_models/: __init__.py  enums.py  task.py  task_definition.py  workflow.py
app/models/: __init__.py  task.py  workflow.py
app/routers/: api.py  auth.py  root.py  share.py  tasks.py  (+3 more)
infrastructure/: docker-compose.yml
src/: cj_hooks.py  cj_models.py  database.py  dependencies.py  main.py  models.py  repository.py  services.py  transitions.py  utils.py
tests/: README.md  TESTS.md  test_cj_models.py
(+68 files in other folders)
